# git-partial

./: .rustfmt.toml  Cargo.toml  README.md  lefthook.yml  mise.toml
.cursor/: initial-concept.md
.cursor/rules/: english-only.mdc
src/: lib.rs  main.rs
src/cli/: add_paths.rs  clone.rs  mod.rs  smart_pull.rs  status.rs
src/core/: metadata.rs  mod.rs  path_selector.rs  repository.rs
src/git/: commands.rs  mod.rs  sparse.rs
src/remote/: mod.rs
tests/: mod.rs
tests/acceptance/: add_paths_tests.rs  clone_tests.rs  mod.rs  smart_pull_tests.rs  status_tests.rs
tests/test_helpers/: test_repo.rs
tests/unit/: metadata_tests.rs  mod.rs  path_selector_tests.rs
