[package]
name = "git-partial"
version = "0.1.0"
edition = "2021"

[dependencies]
# Command line argument parsing
clap = { version = "4.5.37", features = ["derive"] }
# Git operations
git2 = "0.18.3"
# HTTP communication
reqwest = { version = "0.12.15", features = ["json"] }
# Asynchronous processing
tokio = { version = "1.44.2", features = ["full"] }
# Serialization
serde = { version = "1.0.219", features = ["derive"] }
# JSON processing
serde_json = "1.0.140"
# Error handling
anyhow = "1.0.98"
# Path pattern matching
glob = "0.3.2"
# Logging
log = "0.4.27"
# Logging implementation
env_logger = "0.10.2"

[dev-dependencies]
# Temporary files for testing
tempfile = "3.5"
walkdir = "2.3"
